# superset-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  crate-hashes.json  deny.toml  rustfmt.toml
.ci/integration-tests/aws-eks/: cluster.yaml
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  pr_generate_manifests.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: adddruids.crd.yaml  authentication.crd.yaml  druidconnection.crd.yaml  init.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml  supersetcluster.crd.yaml  supersetcredentials.crd.yaml  supersetdb.crd.yaml
deploy/helm/: chart_testing.yaml
deploy/helm/superset-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/superset-operator/configs/: properties.yaml
deploy/helm/superset-operator/crds/: crds.yaml
deploy/helm/superset-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  roles.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/23.4.0/manifests/: stackable-superset-operator.clusterserviceversion.yaml
deploy/olm/23.4.0/metadata/: dependencies.yaml
deploy/operator/: superset-cluster-role.yaml  superset-operator-pod.yaml  superset-service-account.yaml
deploy/role/: superset-cluster-role-binding.yaml  superset-cluster-role.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/superset/: nav.adoc
docs/modules/superset/pages/: cluster_operations.adoc  commandline_args.adoc  index.adoc  required-external-components.adoc  usage.adoc
docs/modules/superset/partials/: nav.adoc  supported-versions.adoc
examples/: add-druid.command.example.yaml  druidconnection.yaml  init.command.example.yaml  openldap.yaml  restart.command.example.yaml  simple-superset-cluster.yaml  simple-superset-credentials-secret.yaml  simple-superset-service.yaml  start.command.example.yaml  stop.command.example.yaml  superset-with-ldap.yaml  supersetdb.yaml
extra/: crds.yaml
nix/: meta.json
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  commands.rs  druidconnection.rs  error.rs  lib.rs  supersetdb.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: add_druid_controller.rs  commands.rs  config.rs  controller.rs  controller_commons.rs  druid_connection_controller.rs  init_controller.rs  main.rs  product_logging.rs  rbac.rs  service.rs  stackable-superset-operator.rs  superset_controller.rs  superset_db_controller.rs  util.rs
rust/operator-binary/src/authorization/: opa.rs
rust/operator-binary/src/config/: mod.rs  product_logging.rs  superset.rs  superset_config.rs  writer.rs
rust/operator-binary/src/controller/: dereference.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  authorization.rs  databases.rs  druidconnection.rs  mod.rs
rust/operator-binary/src/druid_connection_controller/: job_state.rs  mod.rs  rbac.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  job_state.rs  mod.rs  pdb.rs
rust/operator-binary/src/resources/: configmap.rs  deployment.rs  listener.rs  mod.rs  service.rs  statefulset.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: error.rs  lib.rs
scripts/: docs_templating.sh  generate-manifests.sh
tests/: release.yaml  test-definition.yaml
tests/templates/kuttl/activedirectory/: 0-install-postgresql.yaml  4-create-authentication-classes.yaml  5-install-superset.yaml.j2  6-install-test-container.yaml  create-authentication-classes.yaml.j2  helm-bitnami-postgresql-values.yaml.j2  login.py
tests/templates/kuttl/celery-worker/: 10-assert.yaml  20-assert.yaml  20-install-redis.yaml  40-assert.yaml  40-errors.yaml  40-install-superset.yaml.j2  50-assert.yaml  (+9 more)
(+197 files in other folders)
