[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache Superset CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-superset-crd"
repository = "https://github.com/stackabletech/superset-operator"
version = "23.4.0"
publish = false

[dependencies]
serde = "1.0"
serde_json = "1.0"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
strum = { version = "0.24", features = ["derive"] }
snafu = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.9"
