[package]
name = "stackable-superset-crd"
description = "Contains the Apache Superset CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
stackable-operator.workspace = true
product-config.workspace = true
strum.workspace = true
snafu.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
