[package]
name = "stackable-superset-operator"
description = "Stackable Operator for Apache Superset"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-superset-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true
